// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon atom should render arrowDown icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="arcs"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6 9l6 6 6-6"
  />
</svg>
`;

exports[`Icon atom should render arrowUp icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="arcs"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18 15l-6-6-6 6"
  />
</svg>
`;

exports[`Icon atom should render check icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="20 6 9 17 4 12"
  />
</svg>
`;

exports[`Icon atom should render close icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="arcs"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <line
    x1="18"
    x2="6"
    y1="6"
    y2="18"
  />
  <line
    x1="6"
    x2="18"
    y1="6"
    y2="18"
  />
</svg>
`;

exports[`Icon atom should render cog icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="3"
  />
  <path
    d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
  />
</svg>
`;

exports[`Icon atom should render copy icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    height="13"
    rx="2"
    ry="2"
    width="13"
    x="9"
    y="9"
  />
  <path
    d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"
  />
</svg>
`;

exports[`Icon atom should render edit icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polygon
    points="16 3 21 8 8 21 3 21 3 16 16 3"
  />
</svg>
`;

exports[`Icon atom should render enable icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M18.36 6.64a9 9 0 1 1-12.73 0"
  />
  <line
    x1="12"
    x2="12"
    y1="2"
    y2="12"
  />
</svg>
`;

exports[`Icon atom should render more icon 1`] = `
<svg
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="3"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="1"
  />
  <circle
    cx="12"
    cy="5"
    r="1"
  />
  <circle
    cx="12"
    cy="19"
    r="1"
  />
</svg>
`;

exports[`Icon atom should render reset icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
  <line
    x1="4.93"
    x2="19.07"
    y1="4.93"
    y2="19.07"
  />
</svg>
`;

exports[`Icon atom should render search icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="11"
    cy="11"
    r="8"
  />
  <line
    x1="21"
    x2="16.65"
    y1="21"
    y2="16.65"
  />
</svg>
`;

exports[`Icon atom should render trash icon 1`] = `
<svg
  fill="none"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="3 6 5 6 21 6"
  />
  <path
    d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
  />
  <line
    x1="10"
    x2="10"
    y1="11"
    y2="17"
  />
  <line
    x1="14"
    x2="14"
    y1="11"
    y2="17"
  />
</svg>
`;
